--- a/who.html
+++ b/who.html
@@ -41,9 +41,9 @@
 
             <p>Hi! I'm Siloam Yeung. It’s pronounced <em>sih-loh-um</em>, but Salami works too.
                 <br>
-                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Assistant Production Editor at <i>The Peak</i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason. And I’ll nitpick the hell out of anything if you let me.
+                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Assistant Production Editor at <i>The Peak</i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason.
                 <br>
-                <br>I'm fascinated by pretty things I can hold. Particularly, pens and knives.
+                <br>I'm fascinated by pretty things I can touch and hold. Right now I'm really into custom mechanical keyboards.
                 <br>
                 <br>I'm currently seeking internships for 2021. Send me an email at <a href="mailto:siloamyeung01@gmail.com" target="_blank">siloamyeung01@gmail.com</a>, and let's have a chat.
 <!--
