Inclusion of the Manifesto for PUB438
Minor bio edits.

--- a/who.html
+++ b/who.html
@@ -41,9 +41,9 @@
 
             <p>Hi! I'm Siloam Yeung. It’s pronounced <em>sih-loh-um</em>, but Salami works too.
                 <br>
-                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Assistant Production Editor at <i>The Peak</i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason.
+                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Production and Design Editor at <i>The Peak</i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason.
                 <br>
-                <br>I'm fascinated by pretty things I can touch and hold. Right now I'm really into custom mechanical keyboards.
+                <br>I'm fascinated by pretty things I can touch and hold. Unfortunately for my wallet, I just got into custom mechanical keyboards.
                 <br>
                 <br>I'm currently seeking internships for 2021. Send me an email at <a href="mailto:siloamyeung01@gmail.com" target="_blank">siloamyeung01@gmail.com</a>, and let's have a chat.
 <!--
@@ -52,6 +52,25 @@
 -->
             </p>
         </div>
+        
+        <div class="row manifesto">
+            <h2>My principles:</h2>
+            <div class="principles">
+                <div class="principle">
+                    <h3>Give a shit</h3>
+                    <p>Always find an angle you’re passionate about for what you’re working on. It ensures that you always give your best.</p>
+                </div>
+                <div class="principle">
+                    <h3>Keep your priorities straight</h3>
+                    <p>Ethics before money. Health before work. Know what actually matters to you, so you can decide when you can compromise and when you should take a stand.</p>
+                </div>
+                <div class="principle">    
+                    <h3>Never stop learning</h3>
+                    <p>Always take something to heart. It’s never a waste time if you learned something and it keeps you sharp over time.</p>
+                </div>
+            </div>
+        </div>
+            
 
         <footer>
              <div class="main-footer">
