--- a/who.html
+++ b/who.html
@@ -41,7 +41,7 @@
 
             <p>Hi! I'm Siloam Yeung. It’s pronounced <em>sih-loh-um</em>, but Salami works too.
                 <br>
-                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Production and Design Editor at <i>The Peak</i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason.
+                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Production and Design Editor at <i><a href="https://the-peak.ca/" target="_blank">The Peak</a></i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason.
                 <br>
                 <br>I'm fascinated by pretty things I can touch and hold. Unfortunately for my wallet, I just got into custom mechanical keyboards.
                 <br>
@@ -54,7 +54,7 @@
         </div>
         
         <div class="row manifesto">
-            <h2>My principles:</h2>
+            <h2>My principles for life and work:</h2>
             <div class="principles">
                 <div class="principle">
                     <h3>Give a shit</h3>
