Co-op feedback changes.

--- a/who.html
+++ b/who.html
@@ -28,7 +28,7 @@
             <div class="nav">
                 <a href="index.html">What</a>
                 <a href="who.html" id="current-page">Who</a>
-                <a href="#">Resume</a>
+                <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
             </div>
         </div>
 
