--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="nav">
                 <a href="index.html" id="current-page">What</a>
                 <a href="who.html">Who</a>
-                <a href="#">Resume</a>
+                <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
             </div>
         </div>
 
