Email changes in footer

--- a/mysurrey.html
+++ b/mysurrey.html
@@ -193,7 +193,7 @@
                 <div class="contact">
                     <h2>Contact</h2>
                     <p><a href="www.linkedin.com/in/siloam-yeung">LinkedIn</a></p>
-                    <p><a href="mailto:siloamyeung01@gmail.com">siloamyeung@gmail.com</a></p>
+                    <p><a href="mailto:siloamy@sfu.ca">siloam@sfu.ca</a></p>
                 </div>
                 
                 <div class="status">
