Discord Addition + Bug Fixes
Added quick Discord Project page.
Fixed nav-bar bugs.
Fixed LinkedIn link.
Updated Resume for typo.

--- a/mysurrey.html
+++ b/mysurrey.html
@@ -23,14 +23,16 @@
         </div>
 
         <div class="row nav-bar">
-            <div class="logo">
-                <a href="index.html"><div>SY</div></a>
-            </div>
-            <div class="name"><a href="index.html">Siloam Yeung</a></div>
             <div class="nav">
                 <a href="index.html" id="current-page">What</a>
                 <a href="who.html">Who</a>
                 <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
+            </div>
+            <div class="logo">
+                <a href="index.html"><div>SY</div></a>
+            </div>
+            <div class="name">
+                <a href="index.html">Siloam Yeung</a>
             </div>
         </div>
         
@@ -192,7 +194,7 @@
              <div class="main-footer">
                 <div class="contact">
                     <h2>Contact</h2>
-                    <p><a href="www.linkedin.com/in/siloam-yeung">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/siloam-yeung" target="_blank">LinkedIn</a></p>
                     <p><a href="mailto:siloamy@sfu.ca">siloam@sfu.ca</a></p>
                 </div>
                 
