--- a/who.html
+++ b/who.html
@@ -21,14 +21,16 @@
         </div>
 
         <div class="row nav-bar">
+            <div class="nav">
+                <a href="index.html" id="current-page">What</a>
+                <a href="who.html">Who</a>
+                <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
+            </div>
             <div class="logo">
                 <a href="index.html"><div>SY</div></a>
             </div>
-            <div class="name"><a href="index.html">Siloam Yeung</a></div>
-            <div class="nav">
-                <a href="index.html">What</a>
-                <a href="who.html" id="current-page">Who</a>
-                <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
+            <div class="name">
+                <a href="index.html">Siloam Yeung</a>
             </div>
         </div>
 
@@ -57,7 +59,7 @@
             <h2>My principles for life and work:</h2>
             <div class="principles">
                 <div class="principle">
-                    <h3>Give a shit</h3>
+                    <h3>Give a damn</h3>
                     <p>Always find an angle you’re passionate about for what you’re working on. It ensures that you always give your best.</p>
                 </div>
                 <div class="principle">
@@ -76,7 +78,7 @@
              <div class="main-footer">
                 <div class="contact">
                     <h2>Contact</h2>
-                    <p><a href="www.linkedin.com/in/siloam-yeung">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/siloam-yeung" target="_blank">LinkedIn</a></p>
                     <p><a href="mailto:siloamy@sfu.ca">siloam@sfu.ca</a></p>
                 </div>
                 
