Typo in main page Discord project

--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 
                 <a href="discord.html"><img src="img/discord.jpg"></a>
                 <div class="project-title">
-                    <h2>Refuge</h2>
-                    <p><i>UX/UI</i></p>
+                    <h2>Discord</h2>
+                    <p><i>UI</i></p>
                 </div>
-
+                
             </div>
             
             <div class="refuge project">
