Typo Fixes in Footers
"siloam@sfu.ca" to "siloamy@sfu.ca"
Seeking status year removed

--- a/refuge.html
+++ b/refuge.html
@@ -217,13 +217,13 @@
                 <div class="contact">
                     <h2>Contact</h2>
                     <p><a href="https://www.linkedin.com/in/siloam-yeung" target="_blank">LinkedIn</a></p>
-                    <p><a href="mailto:siloamy@sfu.ca">siloam@sfu.ca</a></p>
+                    <p><a href="mailto:siloamy@sfu.ca">siloamy@sfu.ca</a></p>
                 </div>
                 
                 <div class="status">
                     <h2>Status</h2>
                     <p>Expected Graduation in 2023</p>
-                    <p>Seeking Intership Positions for 2021</p>
+                    <p>Seeking Internship Positions</p>
                 </div>
                  
                  <div class="links">
