Co-op: Notes from Vicky
Updated Resume
Fixed nav bug
Updated Bio
Reordered Projects on home page

--- a/who.html
+++ b/who.html
@@ -21,16 +21,16 @@
         </div>
 
         <div class="row nav-bar">
-            <div class="nav">
-                <a href="index.html" id="current-page">What</a>
-                <a href="who.html">Who</a>
-                <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
+            <div class="name">
+                <a href="index.html">Siloam Yeung</a>
             </div>
             <div class="logo">
                 <a href="index.html"><div>SY</div></a>
             </div>
-            <div class="name">
-                <a href="index.html">Siloam Yeung</a>
+            <div class="nav">
+                <a href="index.html">What</a>
+                <a href="who.html" id="current-page">Who</a>
+                <a href="/2021SiloamYeungResume.pdf" target="_blank">Resume</a>
             </div>
         </div>
 
@@ -43,11 +43,11 @@
 
             <p>Hi! I'm Siloam Yeung. It’s pronounced <em>sih-loh-um</em>, but Salami works too.
                 <br>
-                <br>I’m an aspiring UX/UI designer in Vancouver, BC. Currently, I'm the Production and Design Editor at <i><a href="https://the-peak.ca/" target="_blank">The Peak</a></i>. I'm happy to learn, happy to help. I’ll make a mess to find order and reason.
+                <br>I’m an aspiring Experience Designer in Vancouver, BC. Currently, I'm studying design at Simon Fraser University; majoring in Interactive Arts and Technolgoy. I'm always happy to learn, and happy to help. I’ll make a mess to find order and reason.
                 <br>
-                <br>I'm fascinated by pretty things I can touch and hold. Unfortunately for my wallet, I just got into custom mechanical keyboards.
+                <br>I'm fascinated by objects I can touch and hold. Unfortunately for my wallet, I recently got interested in custom mechanical keyboards.
                 <br>
-                <br>I'm currently seeking internships for 2021. Send me an email at <a href="mailto:siloamyeung01@gmail.com" target="_blank">siloamyeung01@gmail.com</a>, and let's have a chat.
+                <br>I'm currently seeking internships for 2022. Send me an email, and let's have a chat.
 <!--
                 <br>
                 <br>My favourite feeling is an epiphany, with a base of bubbling passion, with the joy of revelation on top. It brings two words to mind, “It’s winnable.”
@@ -60,15 +60,15 @@
             <div class="principles">
                 <div class="principle">
                     <h3>Give a damn</h3>
-                    <p>Always find an angle you’re passionate about for what you’re working on. It ensures that you always give your best.</p>
+                    <p>I always find an angle I'm passionate about for what I'm working on. It ensures that I always give my best.</p>
                 </div>
                 <div class="principle">
-                    <h3>Keep your priorities straight</h3>
-                    <p>Ethics before money. Health before work. Know what actually matters to you, so you can decide when you can compromise and when you should take a stand.</p>
+                    <h3>Keep priorities straight</h3>
+                    <p>Ethics before money. Health before work. I want to know what actually matters to me, so I can decide when I can compromise and when I take a stand.</p>
                 </div>
                 <div class="principle">    
                     <h3>Never stop learning</h3>
-                    <p>Always take something to heart. It’s never a waste time if you learned something and it keeps you sharp over time.</p>
+                    <p>I always take something to heart. It’s never a waste time if I learned something and it keeps me sharp over time.</p>
                 </div>
             </div>
         </div>
