Main info updates
Footer update, Bio spellcheck, fixed broken links, new resume

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -27,7 +27,7 @@
             <div class="name"><a href="index.html">Siloam Yeung</a></div>
             <div class="nav">
                 <a href="index.html" id="current-page">Styleguide</a>
-                <a href="who.html">Citations</a>
+                <a href="citations.html">Citations</a>
             </div>
         </div>
     
