--- a/styleguide/citations.html
+++ b/styleguide/citations.html
@@ -26,8 +26,8 @@
             </div>
             <div class="name"><a href="index.html">Siloam Yeung</a></div>
             <div class="nav">
-                <a href="index.html" id="current-page">Styleguide</a>
-                <a href="who.html">Citations</a>
+                <a href="index.html">Styleguide</a>
+                <a href="citat.html" id="current-page">Citations</a>
             </div>
         </div>
     
