Styling Update Start
Editing page grid and starting redesign of project list objects

--- a/mysurrey.html
+++ b/mysurrey.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/project.css">
         <link rel="stylesheet" href="css/mysurrey.css">
+        <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
     </head>
     
     <body>
