--- a/who.html
+++ b/who.html
@@ -8,6 +8,8 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/who.css">
+        <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
     </head>
     
     <body>
