--- a/refuge.html
+++ b/refuge.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/project.css">
         <link rel="stylesheet" href="css/refuge.css">
+        <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins">
     </head>
     
     <body>
