Under Construction Landing Page
Just taking everything down and working on index-draft.html

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -14,9 +14,9 @@
     <body>
         <div class="row nav-bar">
             <div class="logo">
-                <a href="index.html"><div>Sy.</div></a>
+                <a href="index.html"><div>Siloam Yeung<span class=salmon>.</span></div></a>
             </div>
-            <div class="name"><a href="index.html">Siloam Yeung</a></div>
+<!--            <div class="name"><a href="index.html">Siloam Yeung</a></div>-->
             <div class="nav">
                 <a href="index.html" id="current-page">STYLEGUIDE</a>
                 <a href="citations.html">CITATIONS</a>
@@ -24,7 +24,7 @@
         </div>
     
         <div class="row banner-title">
-            <h1>Oh look! You found my style guide! <br> Current status: incomplete.</h1>
+            <h1>Oh look! You found my style guide! <br><span class="salmon"> Status: Frankenstyle.</span></h1>
         </div>
 
         <div class="row demo"> 
