Some extra favicons + Some titling for projects
Still need to figure out how to title the projects

--- a/index-draft.html
+++ b/index-draft.html
@@ -40,8 +40,17 @@
             <div class="proj">
                 <a href="#"><img src="img/blue.jpg"></a>
                 <a href="#"><div class="proj-info">
-                <h2>Cognizant Softvision</h2>
-                <p>Short project summary. Maximum of two lines.</p>
+                <h2>Medical Risk Minimization Tool</h2>
+                <p>Web and print-based guides for a pharmeceutical company's treatment for Parkinson's disease</p>
+                <p class="tags">UX/UI, Print Design, Design Systems, Figma</p>
+            </div></a>
+            </div>
+            
+            <div class="proj">
+                <a href="#"><img src="img/blue.jpg"></a>
+                <a href="#"><div class="proj-info">
+                <h2>Stefan, Fraser &amp; Associates</h2>
+                <p>A website and branding redesign for Stefan, Fraser &amp; Associates</p>
                 <p class="tags">UX/UI</p>
             </div></a>
             </div>
@@ -49,16 +58,7 @@
             <div class="proj">
                 <a href="#"><img src="img/blue.jpg"></a>
                 <a href="#"><div class="proj-info">
-                <h2>Project Template</h2>
-                <p>Short project summary. Maximum of two lines.</p>
-                <p class="tags">UX/UI</p>
-            </div></a>
-            </div>
-            
-            <div class="proj">
-                <a href="#"><img src="img/blue.jpg"></a>
-                <a href="#"><div class="proj-info">
-                <h2>Project Template</h2>
+                <h2>OADI</h2>
                 <p>Short project summary. Maximum of two lines.</p>
                 <p class="tags">UX/UI</p>
             </div></a>
