Bio Changes and Footer Update
- edited bio content
- adjusted bio layout for desktop and mobile
- changed bio photo
- edited footer status
- removed "Important Links" section
- replaced all footers with new edit

- also fixed stylesheet linking in headers

--- a/index-draft.html
+++ b/index-draft.html
@@ -119,15 +119,17 @@
                 
                 <div class="status">
                     <h2>Status</h2>
-                    <p>Expected Graduation in 2023</p>
-                    <p>Seeking Internship/Entry-Level Positions</p>
+                    <p>Graduating from SFU in Oct 2023</p>
+                    <p>Seeking Junior Designer Positions</p>
                 </div>
                  
+<!--
                  <div class="links">
                      <h2>Important Links</h2>
                      <p><a href="styleguide/index.html" target="_blank">Styleguide</a></p>
                      <p><a href="styleguide/citations.html" target="_blank">Citations</a></p>
                  </div>
+-->
             </div>
         </footer>
     </body>
