--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             .row h1 {
                 flex: 1 0 100%;
                 text-align: center;
-                padding: 2em;
+                padding: 2em 0;
             }
         </style>
 
