--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                     <br>
                     <br>I’m weird and think design systems are actually fun. I’m fascinated by objects I can touch and hold. Unfortunately for my wallet, I developed an interest in custom luxury mechanical keyboards. And, no, they don’t make me type any faster or better at games like I wish they would.
                     <br>
-                    <br>I'm currently seeking new opportunities. Send me an email, and let's have a chat.
+                    <br>I'm currently seeking new opportunities. Send me an email, and let's have a chat. &#129305;
     <!--
                     <br>
                     <br>My favourite feeling is an epiphany, with a base of bubbling passion, with the joy of revelation on top. It brings two words to mind, “It’s winnable.”
